--- a/layouts/partials/css/min600px.css
+++ b/layouts/partials/css/min600px.css
@@ -88,7 +88,7 @@ div.main .content .front-matter .date,
 div.main .content .front-matter .author,
 div.main .content .front-matter .tags,
 div.main .content .front-matter .word-count,
-div.main .content .front-matter .reading-time .middot {
+div.main .content .front-matter .middot:before {
 display: initial;
 }
 div.main .container.f04 {
